--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-html-parser": "^6.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.4.0"
   },
   "prettier": {
     "tabWidth": 2
